# wxMathPlot

./: .codedocs  .gitignore  CMakeLists.txt  Center_8h.html  Center_8h__dep__incl.map  Center_8h__dep__incl.md5  Center_8h_source.html  Config_8h.html  Config_8h__dep__incl.map  Config_8h__dep__incl.md5  Config_8h_source.html  Coordinates_8h.html  Coordinates_8h__dep__incl.map  Coordinates_8h__dep__incl.md5  Coordinates_8h_source.html  Fit_8h.html  Fit_8h__dep__incl.map  Fit_8h__dep__incl.md5  Fit_8h_source.html  Fullscreen_8h.html  Fullscreen_8h__dep__incl.map  Fullscreen_8h__dep__incl.md5  Fullscreen_8h_source.html  Grid_8h.html  Grid_8h__dep__incl.map  Grid_8h__dep__incl.md5  Grid_8h_source.html  Load_8h.html  Load_8h__dep__incl.map  Load_8h__dep__incl.md5  Load_8h_source.html  MathPlot.doxyfile  MathPlotConfigDemo_8cpp.html  MathPlotConfigDemo_8cpp__incl.map  MathPlotConfigDemo_8cpp__incl.md5  MathPlotConfig_8cpp.html  MathPlotConfig_8h.html  MathPlotConfig_8h__incl.map  MathPlotConfig_8h__incl.md5  MathPlotConfig_8h_source.html  (+614 more)
.github/workflows/: build-windows-demo-debug.yml  docs.yml
Doc/: DoxyMathPlot.cfg  doxygen_log.txt
Doc/html/: _center_8h_source.html  _config_8h_source.html  _coordinates_8h_source.html  _fit_8h_source.html  _fullscreen_8h_source.html  _grid_8h_source.html  _load_8h_source.html  _math_plot_config_8h_source.html  _mouse_8h_source.html  _screenshot_8h_source.html  _zoom__in_8h_source.html  _zoom__out_8h_source.html  annotated.html  class_math_plot_1_1_math_plot_config_dialog-members.html  class_math_plot_1_1_math_plot_config_dialog.html  class_math_plot_1_1mp_bar_chart-members.html  class_math_plot_1_1mp_bar_chart.html  class_math_plot_1_1mp_bitmap_layer-members.html  class_math_plot_1_1mp_bitmap_layer.html  class_math_plot_1_1mp_chart-members.html  class_math_plot_1_1mp_chart.html  class_math_plot_1_1mp_covariance_ellipse-members.html  class_math_plot_1_1mp_covariance_ellipse.html  class_math_plot_1_1mp_f_x-members.html  class_math_plot_1_1mp_f_x.html  class_math_plot_1_1mp_f_x_y-members.html  class_math_plot_1_1mp_f_x_y.html  class_math_plot_1_1mp_f_x_y_vector-members.html  class_math_plot_1_1mp_f_x_y_vector.html  class_math_plot_1_1mp_f_y-members.html  class_math_plot_1_1mp_f_y.html  class_math_plot_1_1mp_function-members.html  class_math_plot_1_1mp_function.html  class_math_plot_1_1mp_horizontal_line-members.html  class_math_plot_1_1mp_horizontal_line.html  class_math_plot_1_1mp_info_coords-members.html  class_math_plot_1_1mp_info_coords.html  class_math_plot_1_1mp_info_layer-members.html  class_math_plot_1_1mp_info_layer.html  class_math_plot_1_1mp_info_legend-members.html  (+109 more)
MathPlotConfig/: MathPlotConfig.cbp  MathPlotConfig.cpp  MathPlotConfig.depend  MathPlotConfig.h  MathPlotConfig.layout  MathPlotConfigApp.cpp  MathPlotConfigApp.h  MathPlotConfigDemo.cpp  MathPlotConfigMain.cpp  MathPlotConfigMain.h  MathPlotConfig_Linux.cbp  resource.rc
MathPlotConfig/wxsmith/: MathPlotConfigdialog.wxs
MathPlotDemo/: MathPlotDemo.cbp  MathPlotDemoApp.cpp  MathPlotDemoApp.h  MathPlotDemoMain.cpp  MathPlotDemoMain.h  MathPlotDemo_Linux.cbp  README.md  Sample.h  wxPlotDemo_Windows.sln  wxPlotDemo_Windows.vcxproj  wxPlotDemo_Windows.vcxproj.filters  wxPlotDemo_wxFormBuilder_Windows.sln  wxPlotDemo_wxFormBuilder_Windows.vcxproj  wxPlotDemo_wxFormBuilder_Windows.vcxproj.filters
MathPlotDemo/wxsmith/: MathPlotDemoframe.wxs
SandBox/: MathPlotConfig.cpp  MathPlotDemoMain.cpp  MathPlotDemoMain.h  Sample.h  mathplot.cpp  mathplot.h
Sandbox/: MathPlotConfig.cpp  MathPlotConfig.h  mathplot.cpp  mathplot.cpp.bak  mathplot.h
mathplot/: MathPlotConfig.cpp  MathPlotConfig.h  mathplot.cpp  mathplot.h
mathplot/Images/: Center.h  Config.h  Coordinates.h  Fit.h  Fullscreen.h  Grid.h  Load.h  Mouse.h  Screenshot.h  Zoom_in.h  Zoom_out.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+57 more)
wxFormBuilder/: MathPlotConfig.cpp  MathPlotConfig.fbp  MathPlotConfig.h  MathPlotConfigBuilder.cpp  MathPlotConfigBuilder.h  README.md
